--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^6.0.0",
     "handlebars": "^4.0.12",
+    "handlebars-helpers": "^0.10.0",
     "hapi": "^17.5.4",
     "hapi-auth-basic": "^5.0.0",
     "hapi-auth-cookie": "^9.0.0",
@@ -28,12 +29,16 @@
     "inert": "^5.1.0",
     "joi": "^13.6.0",
     "jwks-rsa": "^1.3.0",
-    "mongoose": "^5.2.14",
+    "mongod": "^2.0.0",
+    "mongoose": "^5.2.15",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "sequelize": "^4.38.0",
+    "service": "^0.1.4",
     "slug": "^0.9.1",
+    "start": "^5.1.0",
+    "sudo": "^1.0.3",
     "vision": "^5.4.0"
   }
 }
