--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwks-rsa": "^1.3.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.2.15",
+    "node-fetch": "^2.2.0",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
