--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jwks-rsa": "^1.3.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.2.15",
+    "mysql": "^2.16.0",
     "node-fetch": "^2.2.0",
     "passport": "^0.4.0",
     "path": "^0.12.7",
